# CoreJSON

./: .gitignore  .gitmodules  CJExport.h  CJPlatformCompatibility.h  CMakeLists.txt  CoreJSON-Prefix.pch  CoreJSON.c  CoreJSON.h  Readme.md
CoreJSON/: CoreJSON-Info.plist  CoreJSON.c
CoreJSON.xcodeproj/: project.pbxproj
CoreJSONTests/: CMakeLists.txt  CoreJSONTests-Prefix.pch  CoreJSONTests.c  CoreJSONTests.h  CoreTestAllocator.c  CoreTestAllocator.h  main.c
